ui: make main toolbar buttons overflow into a menu http://bugs.activestate.com/show_bug.cgi?id=91333
(integrated from komodo (trunk) change 66819 by marky)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@8917 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/komodo.css
+++ b/src/chrome/komodo/skin/komodo.css
@@ -70,12 +70,28 @@ toolbar[printpreview="true"] {
 }
 
 #main-toolboxrow {
-  overflow: hidden;
   min-width: 1px;
   min-height: 19px;
   -moz-appearance: toolbar;
   border-top: 1px solid ThreeDHighlight;
   border-bottom: 1px solid ThreeDShadow;
+  -moz-binding: url('chrome://komodo/content/bindings/toolbar.xml#toolboxrow-overflow');
+}
+
+#main-toolboxrow > [first-overflow] ~ *,
+#main-toolboxrow > [first-overflow] > [first-child-overflow],
+#main-toolboxrow > [first-overflow] > [first-child-overflow] ~ * {
+  /* things that would overflow in the toolboxrow */
+  visibility: hidden;
+}
+
+#main-toolboxrow > .overflow-toolbarbutton > .toolbarbutton-menu-dropmarker {
+  /* the dropmarker on the toolboxrow overflow button */
+  visibility: collapse;
+}
+
+#main-toolboxrow .overflow-menupopup [disabled] .menu-iconic-icon {
+  opacity: 0.5;
 }
 
 #main-toolboxrow > toolbar {
